# Kivy_BoilerV1

./: RedMoon.kv  __init__.py  __main__.py  main.py  pyproject.toml  readme.md
pages/: __init__.py
src/: __init__.py  login_screen.kv  login_screen.py  main.py  other.py  splash_screen.kv  splash_screen.py
