[tool.poetry]
name = "red_moon_pw34"
version = "0.1.0"
description = "pyweek34 project"
authors = ["Josh S Wilkinson <JoshsWilkinson@Outlook.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^2.1"
Kivy = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
